developer/src/kmc-package/test/fixtures/invalid/warn_file_in_package_does_not_follow_filename_conventions_2.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.0</Version>
  </Info>
  <Files>
    <File>
      <!-- extension should not have capitals -->
      <Name>my_file.PDF</Name>
      <Description>My Documentation</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.PDF</FileType>
    </File>
    <File>
      <!-- extension should not have capitals -->
      <Name>basic.kmx</Name>
      <Description>Keyboard my special keyboard</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Khmer Angkor</Name>
      <ID>basic</ID>
      <Version>1.3</Version>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
